k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trackingapi
  labels:
    app: trackingapi
    component: trackingapi
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: trackingapi
      component: trackingapi
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: trackingapi
        component: trackingapi
    spec:
      containers:
      - name: trackingapi
        image: microacr1.azurecr.io/trackingapi:latest     
        ports:
        - containerPort: 80
        imagePullPolicy: Always   
        resources:
          requests:        
            cpu: "300m"
          limits:          
            cpu: "600m"     
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentapi
  labels:
    app: paymentapi
    component: paymentapi
spec:
  replicas: 2  
  selector: 
    matchLabels: 
      app: paymentapi
      component: paymentapi
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: paymentapi
        component: paymentapi
    spec:
      containers:
      - name: paymentapi
        image: microacr1.azurecr.io/paymentapi:latest     
        ports:
        - containerPort: 80
        imagePullPolicy: Always   
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookingapi
  labels:
    app: bookingapi
    component: bookingapi
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: bookingapi
      component: bookingapi
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: bookingapi
        component: bookingapi
    spec:
      containers:
      - name: bookingapi
        image: microacr1.azurecr.io/bookingapi:latest     
        ports:
        - containerPort: 80
        imagePullPolicy: Always   
        resources:
          requests:        
            cpu: "200m"
          limits:          
            cpu: "600m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcweb
  labels:
    app: mcweb
    component: mcweb
spec:
  replicas: 2  
  selector: 
    matchLabels: 
      app: mcweb
      component: mcweb
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: mcweb
        component: mcweb
    spec:
      containers:
      - name: mcweb
        image: microacr1.azurecr.io/mcweb:latest     
        ports:
        - containerPort: 80
        imagePullPolicy: Always       
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webgateway
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: akssha-akshandsonlab-93b645-b7ede46e.hcp.centralus.azmk8s.io
    http:
      paths:     
      - backend:
          serviceName: mcweb
          servicePort: 5004
        path: /
